# hw_31

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-run.sh  download-data.sh  manage.py  migrate-loadall.sh  pyproject.toml  pytest.ini  t.py
ads/: admin.py  apps.py  models.py  permissions.py  serializers.py  settings.py  urls.py  utils.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_selection_owner.py  0002_rename_ads_ad.py  0003_alter_ad_name.py  0003_alter_ad_options_alter_cat_options_alter_ad_address_and_more.py  0004_ad_category_id.py  0004_alter_ad_is_published.py  0005_alter_ad_category_id_alter_ad_description.py  0005_alter_ad_is_published.py  0006_alter_ad_category_id.py  0006_user_birth_date.py  0007_location_user_alter_ad_options.py  0007_remove_user_age_alter_user_birth_date.py  0008_alter_user_email.py  0008_rename_category_id_ad_category.py  0009_alter_ad_options_alter_cat_options_user_age_and_more.py  0009_alter_user_birth_date_alter_user_email.py  0010_alter_ad_author.py  0010_alter_user_email.py  0011_alter_ad_options_ad_image.py  0011_cat_slug.py  0012_remove_ad_address.py  0013_alter_ad_price.py  0014_alter_user_age.py  0015_alter_cat_options_alter_user_managers_and_more.py  0016_alter_user_role.py  (+1 more)
data/: ads.json  categories.json  create_jsons.py  create_jsons2.py
fixtures/: ads.json  categories.json  create_jsons.py  data.json  data1.json
skyvito/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factory.py  fixtures.py  test_ad.py  test_selection.py
(+8 files in other folders)
