[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["ipotemkin <91094458+ipotemkin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
